# CareerOS

./: .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  CODING_STANDARDS.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py  health.py  v1.py
apps/api/app/core/: __init__.py  config.py  context.py  db.py  errors.py  health.py  logging.py  middleware.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260712_0001_baseline.py
apps/api/tests/: conftest.py  test_app.py  test_config.py  test_db.py  test_db_integration.py  test_health.py  test_logging.py  test_smoke.py
apps/web/: README.md  eslint.config.mjs  next.config.mjs  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
docs/: 00-README-index.md  01-product-definition.md  02-software-architecture.md  03-database-design.md  04-database-schema.sql  05-api-design.md  06-ui-ux-design.md  07-user-journeys.md  08-module-design.md  09-analytics.md  10-ai-features.md  11-security.md  12-testing-strategy.md  13-deployment.md  14-development-roadmap.md  15-improvement-roadmap.md  16-engineering-implementation-plan.md  17-architecture-freeze-report.md  18-sprint-01-task-breakdown.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION-STANDARDS.md  FAQ.md  GLOSSARY.md  PRODUCT.md  RELEASES.md  ROADMAP.md  SECURITY.md  TESTING.md
docs/ADR/: ADR-0000-template.md  ADR-0001-architecture.md  ADR-0002-database.md  ADR-0003-authentication.md  ADR-0004-frontend.md  ADR-0005-backend.md
infra/: README.md
