[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "careeros-api"
version = "0.0.0"
description = "CareerOS backend API (FastAPI). Application code is introduced from Story S1-3."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }
# Runtime dependencies are added per story as they are first needed
# (e.g. FastAPI/Pydantic in S1-3, SQLAlchemy/Alembic in S1-5).
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff==0.6.8",
  "mypy==1.11.2",
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (docs 16 §8).
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (import ordering)
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# MyPy — strict typing (docs 16 §8: no `Any`, explicit types).
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_explicit = true
show_error_codes = true
pretty = true
files = ["app", "tests"]

# ---------------------------------------------------------------------------
# Pytest.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
