[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "careeros-api"
version = "0.0.0"
description = "CareerOS backend API (FastAPI): app factory, typed config, and error envelope."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }
# Runtime dependencies are added per story as they are first needed
# (SQLAlchemy/Alembic arrive in S1-5).
dependencies = [
  "fastapi==0.139.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
  "ruff==0.6.8",
  "mypy==1.11.2",
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "httpx==0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (docs 16 §8).
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort (import ordering)
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "RUF", # ruff-specific
  "ANN401", # forbid explicit `Any` in annotations
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# MyPy — strict typing (docs 16 §8: no `Any`, explicit types).
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
# `strict` already bans implicit/untyped `Any`; explicit `Any` in hand-written
# code is caught by Ruff (ANN401). `disallow_any_explicit` is intentionally off
# because it false-positives on Pydantic v2's mypy-plugin-generated model code.
warn_return_any = true
show_error_codes = true
pretty = true
files = ["app", "tests"]

# ---------------------------------------------------------------------------
# Pytest.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
